参加者サイト修正

--- a/quiz/templates/index.html
+++ b/quiz/templates/index.html
@@ -83,11 +83,11 @@
 			<!-- Register Section -->
 			<div class="p-20 items-center leading-10 text-center font-light text-white bg-gradient-to-r from-red-300 to-yellow-300">
 				<h2 class="text-5xl ">REGISTER</h2>
-				<form class="mt-10">
+				<div class="mt-10">
 					<label for="nickname">ニックネーム（必須）</label>
 					<input type="text" class="text-gray-600" minlength="2" maxlength="10" id="nickname">
-					<button id="join-button" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn">参加</button>
-				</form>
+					<button id="join-button" class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn" href="quiz_play">参加</button>
+				</div>
 			</div>
 		</section>
 		<footer class="m-5 text-center">
