--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -118,16 +118,16 @@
 					<div class="flex justify-center border border-b-0 border-orange-200">
 						<div>
 							<div>
-								<input type="radio" id="A" name="answer" class="hidden peer"><label for="A" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-red-200 peer-checked:bg-red-200" value="A">選択肢A</label>
+								<input type="radio" id="A" name="answer" class="hidden peer" value="A"><label id="A-label" for="A" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-red-200 peer-checked:bg-red-200" value="A">選択肢A</label>
 							</div>
 							<div>
-								<input type="radio" id="B" name="answer" class="hidden peer"><label for="B" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-blue-200 peer-checked:bg-blue-200" value="B">選択肢B</label>
+								<input type="radio" id="B" name="answer" class="hidden peer" value="B"><label id="B-label" for="B" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-blue-200 peer-checked:bg-blue-200" value="B">選択肢B</label>
 							</div>
 							<div>
-								<input type="radio" id="C" name="answer" class="hidden peer"><label for="C" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-yellow-200 peer-checked:bg-yellow-200" value="C">選択肢C</label>
+								<input type="radio" id="C" name="answer" class="hidden peer" value="C"><label id="C-label" for="C" class="flex justify-center border-t-2 w-screen border-gray-200 p-2 text-2xl hover:bg-yellow-200 peer-checked:bg-yellow-200" value="C">選択肢C</label>
 							</div>
 							<div>
-								<input type="radio" id="D" name="answer" class="hidden peer"><label for="D" class="flex justify-center border-t-2 border-b-2 w-screen border-gray-200 p-2 text-2xl hover:bg-green-200 peer-checked:bg-green-200" value="D">選択肢D</label>						
+								<input type="radio" id="D" name="answer" class="hidden peer" value="D"><label id="D-label" for="D" class="flex justify-center border-t-2 border-b-2 w-screen border-gray-200 p-2 text-2xl hover:bg-green-200 peer-checked:bg-green-200" value="D">選択肢D</label>						
 							</div>
 						</div>
 					</div>
