--- a/quiz/templates/quiz_play.html
+++ b/quiz/templates/quiz_play.html
@@ -28,10 +28,10 @@
 	<!--コンテンツ-->
 	<section class="relative">
 		<!--待機中-->
-		<div id="waiting" class="absolute w-screen h-full bg-color-gray bg-gray-100" style="visibility: hidden;">
+		<div id="waiting" class="absolute w-screen h-full bg-color-gray bg-gray-100" style="visibility: visible;">
 			<div class="leading-10 text-center">
 				<h2 class="text-5xl">INIAD-Q</h2>
-				<p class="text-3xl font-light">待機中..</p>
+				<p class="text-3xl font-light pt-10">待機中..</p>
 			</div>
 		</div>
 		<!--正解-->
@@ -54,10 +54,10 @@
 			<div class="flex justify-center items-center mt-20">
 				<img src="{% static 'images/incorrect.svg' %}" class="h-52">
 			</div>
-			<div class="flex justify-center items-center mt-5">
+			<div class="flex justify-center items-center mt-5 pt-10">
 				<h2 class="text-4xl">不正解！</h2>
 			</div>
-			<div class="flex justify-center items-center mt-5">
+			<div class="flex justify-center items-center mt-5 pt-10">
 				<p class="text-2xl">答えは<span id="incorrectMessage">A</span>です。</p>
 			</div>
 			<div onClick="document.getElementById('incorrect').style.visibility='hidden';">
@@ -67,7 +67,7 @@
 		<!--ランキング表示-->
 	  <div id="ranking" class="absolute w-screen h-full bg-color-gray bg-gray-200 bg-opacity-75" style="visibility: hidden;">
 		  <div>
-			  <h2 id="ranking-head" class="flex justify-center text-4xl">中間発表</h2>
+			  <h2 id="ranking-head" class="flex justify-center text-4xl pt-10">中間発表</h2>
 		  </div>
 		  <div class="flex justify-center w-auto overflow-y-auto h- m-6 bg-white border-2 border-yellow-300 rounded">
 				<div >
@@ -76,7 +76,9 @@
 			  	</div>
 			</div>
 			<div>
-				<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
+				<div onClick="window.location.href='index';">
+					<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
+		  		</div>
 				<div onClick="document.getElementById('ranking').style.visibility='hidden';">
 					<p id="ranking-close" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100">閉じる</p>
 				</div>
