--- a/daphne/quiz/templates/dbg_socket.html
+++ b/daphne/quiz/templates/dbg_socket.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <textarea id="textform"></textarea>
+        <textarea rows="50" cols="50" id="textform"></textarea>
         <input type="button" onclick="socket(); return false;" value="test">
     </div>
     <p id="display">
