Revert "UPDATE quiz_play.html"
This reverts commit ccdf8ea22b753c89f698e941de2d6a03a66caa54.

--- a/daphne/quiz/templates/quiz_play.html
+++ b/daphne/quiz/templates/quiz_play.html
@@ -76,7 +76,7 @@
 			  	</div>
 			</div>
 			<div>
-				<div onClick="window.location.href='https://quiz.iniadfes.com/';">
+				<div onClick="window.location.href='index';">
 					<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
 		  		</div>
 				<div onClick="document.getElementById('ranking').style.visibility='hidden'; document.getElementById('ranking-close').style.visibility='hidden';">
