--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -59,15 +59,34 @@
 			</div>
 			<div class="flex-initial justify-center w-auto overflow-y-auto mr-6 ml-6 sm:mr-0 h-96 border-2 border-orange-300 rounded">
 				<table class="text-gray-800 w-full sm:w-auto">
+					{% if object_list %}
+					<select name="" id="quiz_events" onchange="select_ranking(); return false;">
+						{% for object in object_list %}
+							<option value="{{ forloop.counter0 }}">{{ object.name }}</option>
+						{% endfor %}
+					</select>
 					<thead class="text-left border-b-2 border-orange-300">
 						<tr>
 							<th class="px-4 py-3">#</th><th class="px-4 py-3">Name</th><th class="px-4 py-3">Score</th>
 						</tr>
 					</thead>
 					<tbody>
+						{% for e_rank in event_ranking %}
+							{% if forloop.counter0 == 0 %}
+								{% for rank in e_rank %}
+								<tr>
+									<td class="px-4 py-3">{{ rank.temp_rank }}</td>
+									<td class="px-4 py-3">{{ rank.user.nickname }}</td>
+									<td class="px-4 py-3">{{ rank.score }}</td>
+								</tr>
+								{% endfor %}
+							{% endif %}
+						{% endfor %}
+					{% else %}
 						<tr>
-							<td class="px-4 py-3">準備中</td>
+							<td class="px-4 py-3">準備中...</td>
 						</tr>
+					{% endif %}
 					</tbody>
 				</table>
 			</div>
@@ -88,4 +107,23 @@
 		</footer>
     </body>
 	<script src="{% static 'js/index.js' %}"></script>
+	<script type="text/javascript">
+    const d_rank = document.getElementById("display_ranking");
+    function select_ranking(){
+        let id = Number(document.getElementById("quiz_events").value);
+        while( d_rank.firstChild ){
+            d_rank.removeChild( d_rank.firstChild );
+        }
+        "{% for e_rank in event_ranking %}"
+            if("{{ forloop.counter0 }}" == id){
+                "{% for rank in e_rank %}"
+                    var text = "{{ rank.temp_rank }}" + "位, 名前 " + "{{ rank.user.nickname }}" + ", スコア " + "{{ rank.score }}" + ", 正答数 " + "{{ rank.correctNums }}";
+                    var new_element = document.createElement('p');
+                    new_element.textContent = text;
+                    d_rank.appendChild(new_element);
+                "{% endfor %}"
+            };
+        "{% endfor %}"
+    }
+</script>
 </html>
