--- a/daphne/quiz/templates/control_quiz_operate.html
+++ b/daphne/quiz/templates/control_quiz_operate.html
@@ -21,6 +21,7 @@
             {% endif %}
             <!--待機中切り替え-->
             <input type="button" value="スタート" onclick="SendOperate(this); return false;">
+            <input type="button" value="イベント終了" onclick="SendOperate(this); return false;">
         <h2>出題する問題を選択してください。</h2>
             <!--開催会と問題を選択する形？-->
             <select name="question" id="select_q"></select>
