add Force Reset
順序制御でエラーが起きた際に、強制リセットかけられるように。

--- a/daphne/quiz/templates/control_quiz_operate.html
+++ b/daphne/quiz/templates/control_quiz_operate.html
@@ -39,6 +39,8 @@
             <input type="button" value="最終発表" onclick="SendOperate(this); return false;">
         <h2>クイズ終了ボタン</h2>
             <input type="button" value="終了" onclick="SendOperate(this); return false;">
+        <h2>(緊急時用)強制リセット(解答は保持される)</h2>
+            <input type="button" value="強制リセット" onclick="SendOperate(this); return false;">
 
         <p><a href="{% url 'control_quiz_top' %}">トップページへ</a></p>
         
