軽微な修正。
・採点後も「回答を締め切りました」が表示されることを改善。
・titleを修正。

--- a/daphne/quiz/templates/quiz_play.html
+++ b/daphne/quiz/templates/quiz_play.html
@@ -2,7 +2,7 @@
 <html>
 {% load static %}
 <head>
-	<title>quiz_play.html</title>
+	<title>Playing INIAD-Q</title>
     <meta charset="UTF-8">
 	<!--<script src="https://cdn.tailwindcss.com"></script>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
