ダミーテキストの置き換え

--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -41,14 +41,14 @@
 			</div>
 			<div class="font-light text-gray-600 sm:mr-12">
 				<h3 class="text-2xl border-b-2 border-orange-100">Overview</h3><br>
-				<p>texttexttexttexttexttexttexttexttext</p><br>
+				<p>イニアド生と来場者、視聴者による楽しいクイズ大会。ジャンルは赤羽、イニアド、東洋そして一般教養！果たして誰がクイズ王に輝くのか？！</p><br>
 				<h3 class="text-2xl border-b-2 border-orange-100">Rule</h3><br>
-				<p>texttexttexttexttexttexttexttexttext</p><br>
+				<p>四択からの選択問題、回答方法はスマホ画面に表示されるものから回答できます</p><br>
 				<h3 class="text-2xl border-b-2 border-orange-100">Schedule</h3><br>
 				<ul>
-					<li>10.29 13:00~</li>
-					<li>10.29 13:00~</li>
-					<li>10.29 13:00~</li>
+					<li>10.29 11:50~(INIADホール)</li>
+					<li>10.30 14:10~(七福神広場)</li>
+					<li>10.29 16:50~(INIADホール)</li>
 				</ul><br>
 			</div>
 		</section>
