ランキング表示機能

--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -61,7 +61,14 @@
 				<select id="selectMenu">
 					<option>選択してください</option>
 				</select>
-				<table class="text-gray-800 w-full sm:w-auto">
+				<table id="rankingTable" class="text-gray-800 w-full sm:w-auto">
+					<thead>
+						<tr>
+							<th>順位</th><th>名前</th><th>スコア</th>
+						</tr>
+					</thead>
+					<tbody id="rankingTableBody">
+					</tbody>
 				</table>
 			</div>
 		</section><br>
