ユーザの順位を確認する機能を追加

--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -71,6 +71,7 @@
 					</tbody>
 				</table>
 			</div>
+			<button class="mt-10 pl-3 pr-3 pt-2 pb-2 text-2xl bg-white bg-opacity-25 btn" onclick="showRank()">自分の順位を見る</button>
 		</section><br>
 		<section>
 			<!-- Register Section -->
