--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 	{% load static %}
     <head>
-        <title>INIAD-Q</title>
+        <title>INIA-DON!</title>
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="https://cdn.tailwindcss.com"></script>
@@ -10,7 +10,7 @@
     <body>
         <header class="mx-auto">
 			<div class="flex justify-between items-center">
-				<a href=""><h1 class="text-4xl p-3 bg-clip-text text-transparent bg-gradient-to-r from-red-300 to-yellow-300">INIAD-Q</h1></a>
+				<a href=""><h1 class="text-4xl p-3 bg-clip-text text-transparent bg-gradient-to-r from-red-300 to-yellow-300">INIA-DON!</h1></a>
 					<!-- 
 					<button>
 						<svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
@@ -31,7 +31,7 @@
 		<section class="p-10 text-center">
 			<!-- Main Visual -->
 			<div>
-			<h2 class="text-6xl font-light border-b-2 border-orange-100">INIAD-Q</h2>
+			<h2 class="text-6xl font-light border-b-2 border-orange-100">INIA-DON!</h2>
 			</div>
 		</section>
 		<section class="sm:flex text-center items-center justify-center">
@@ -41,14 +41,15 @@
 			</div>
 			<div class="font-light text-gray-600 sm:mr-12">
 				<h3 class="text-2xl border-b-2 border-orange-100">Overview</h3><br>
-				<p>イニアド生と来場者、視聴者による楽しいクイズ大会。ジャンルは赤羽、イニアド、東洋そして一般教養！果たして誰がクイズ王に輝くのか？！</p><br>
+				<p>こちらは INIA-DON! クイズ解答用サイトになります。ジャンルはINIAD、アニメ＆漫画、科学、一般教養の全4つ！目指せクイズ王！</p><br>
 				<h3 class="text-2xl border-b-2 border-orange-100">Rule</h3><br>
 				<p>四択からの選択問題、回答方法はスマホ画面に表示されるものから回答できます</p><br>
 				<h3 class="text-2xl border-b-2 border-orange-100">Schedule</h3><br>
 				<ul>
-					<li>10.29 11:50~(INIADホール)</li>
-					<li>10.30 14:10~(七福神広場)</li>
-					<li>10.29 16:50~(INIADホール)</li>
+					<li>11.04 12:00~(INIADホール)</li>
+					<li>11.04 14:10~(INIADステージ)</li>
+					<li>11.05 12:00~(INIADホール)</li>
+					<li>11.05 16:10~(INIADステージ)</li>
 				</ul><br>
 			</div>
 		</section>
@@ -85,7 +86,7 @@
 			</div>
 		</section>
 		<footer class="m-5 text-center">
-			<p>©2022 INIAD-FES実行委員会</p>
+			<p>©2023 INIAD-FES実行委員会</p>
 		</footer>
     </body>
 	<script type="application/javascript" src="{% static 'js/index.js' %}"></script>
