--- a/daphne/quiz/templates/quiz_play.html
+++ b/daphne/quiz/templates/quiz_play.html
@@ -2,7 +2,7 @@
 <html>
 {% load static %}
 <head>
-	<title>Playing INIAD-Q</title>
+	<title>Playing INIA-DON!</title>
     <meta charset="UTF-8">
 	<!--<script src="https://cdn.tailwindcss.com"></script>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 	<!--ヘッダー-->
 	<header class="mx-auto">
 		<div class="flex justify-between items-center">
-			<a href=""><h1 class="text-4xl p-3 bg-clip-text text-transparent bg-gradient-to-r from-red-300 to-yellow-300">INIAD-Q</h1></a>
+			<a href=""><h1 class="text-4xl p-3 bg-clip-text text-transparent bg-gradient-to-r from-red-300 to-yellow-300">INIA-DON!</h1></a>
 				<!-- 
 				<button>
 					<svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
@@ -22,7 +22,7 @@
 					</svg>                       
 				</button>
 				-->
-			<p id="message-paragraph" class="text-xl mr-5">INIAD-Qにようこそ!</p>
+			<p id="message-paragraph" class="text-xl mr-5">INIA-DON!にようこそ!</p>
 		</div>
 	</header>
 	<!--コンテンツ-->
@@ -30,7 +30,7 @@
 		<!--待機中-->
 		<div id="waiting" class="absolute w-screen h-full bg-color-gray bg-gray-100" style="visibility: visible;">
 			<div class="leading-10 text-center">
-				<h2 class="text-5xl">INIAD-Q</h2>
+				<h2 class="text-5xl">INIA-DON!</h2>
 				<p class="text-3xl font-light pt-10">待機中..</p>
 			</div>
 		</div>
@@ -151,7 +151,7 @@
 			<!--トップに戻る-->
 		</section>
 		<footer class="m-5 text-center">
-		  <p>©2022 INIAD-FES実行委員会</p>
+		  <p>©2023 INIAD-FES実行委員会</p>
 		</footer>
 		<script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 		<script src="{% static 'js/quiz_play.js' %}"></script>
