--- a/daphne/quiz/templates/index.html
+++ b/daphne/quiz/templates/index.html
@@ -2,6 +2,15 @@
 <html lang="ja">
 	{% load static %}
     <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-W6SPQFPJPJ"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-W6SPQFPJPJ');
+	</script>
         <title>INIA-DON!</title>
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
