遷移先の間違いを修正

--- a/daphne/quiz/templates/quiz_play.html
+++ b/daphne/quiz/templates/quiz_play.html
@@ -77,7 +77,7 @@
 			</div>
 			<div>
 				<div onClick="window.location.href='';">
-					<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden"><a href="https://quiz.iniadfes.com/">トップページに戻る</a></p>
+					<p id="ranking-back-to-toppage" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100" style="visibility: hidden"><a href="/">トップページに戻る</a></p>
 		  		</div>
 				<div onClick="document.getElementById('ranking').style.visibility='hidden'; document.getElementById('ranking-close').style.visibility='hidden';">
 					<p id="ranking-close" class="flex justify-center text-2xl m-5 p-3 border-2 border-gray-300 rounded bg-white hover:bg-gray-100">閉じる</p>
